tests/neg/experimental-message-experimental-flag/Test_2.scala
//> using options -Yno-experimental

def g() = f() // error
